# opal-player

./: Cargo.toml  LICENSE  README.md  README.zh.md  opaline.example.toml
src/: app.rs  config.rs  error.rs  input.rs  library.rs  lyrics.rs  main.rs  mpris.rs  player.rs  playlist.rs  theme.rs  ui.rs
